src/cstgen/snapshots/fin__cstgen__tests__insta@closure_impl_item.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/closure_impl_item.fin
---
File@0..27
  ItemExpr@0..27
    ExprClosure@0..27
      Pipe@0..1 "|"
      ArgList@1..14
        Arg@1..14
          ConstKw@1..6 "const"
          Whitespace@6..7 " "
          ExprIdent@7..8
            Ident@7..8 "T"
          Colon@8..9 ":"
          Whitespace@9..10 " "
          ExprIdent@10..14
            Ident@10..14 "Type"
      Pipe@14..15 "|"
      Whitespace@15..16 " "
      ExprImpl@16..27
        ImplKw@16..20 "impl"
        Whitespace@20..21 " "
        ExprIdent@21..25
          Ident@21..24 "Foo"
          Whitespace@24..25 " "
        BraceOpen@25..26 "{"
        BraceClose@26..27 "}"
