src/cstgen/snapshots/fin__cstgen__tests__insta@expr_block_empty.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_block_empty.fin
---
File@0..2
  ItemExpr@0..2
    ExprBlock@0..2
      BraceOpen@0..1 "{"
      BraceClose@1..2 "}"
