src/cstgen/snapshots/fin__cstgen__tests__insta@expr_block_with_let.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_block_with_let.fin
---
File@0..24
  ItemExpr@0..24
    ExprBlock@0..24
      BraceOpen@0..1 "{"
      Whitespace@1..6 "\n    "
      StmtLocal@6..21
        LetKw@6..9 "let"
        Whitespace@9..10 " "
        PatIdent@10..12
          Name@10..12
            Ident@10..11 "y"
            Whitespace@11..12 " "
        Eq@12..13 "="
        Whitespace@13..14 " "
        ExprIdent@14..15
          Ident@14..15 "z"
        Semi@15..16 ";"
        Whitespace@16..21 "\n    "
      StmtExpr@21..23
        ExprIdent@21..23
          Ident@21..22 "y"
          Whitespace@22..23 "\n"
      BraceClose@23..24 "}"
