src/cstgen/snapshots/fin__cstgen__tests__insta@expr_call.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_call.fin
---
File@0..9
  ItemExpr@0..9
    ExprCall@0..9
      ExprIdent@0..3
        Ident@0..3 "foo"
      ParenOpen@3..4 "("
      CallArgs@4..8
        ExprIdent@4..5
          Ident@4..5 "a"
        Comma@5..6 ","
        Whitespace@6..7 " "
        ExprIdent@7..8
          Ident@7..8 "b"
      ParenClose@8..9 ")"
