src/cstgen/snapshots/fin__cstgen__tests__insta@expr_call_chained.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_call_chained.fin
---
File@0..9
  ItemExpr@0..9
    ExprCall@0..9
      ExprCall@0..6
        ExprIdent@0..3
          Ident@0..3 "foo"
        ParenOpen@3..4 "("
        CallArgs@4..5
          ExprIdent@4..5
            Ident@4..5 "a"
        ParenClose@5..6 ")"
      ParenOpen@6..7 "("
      CallArgs@7..8
        ExprIdent@7..8
          Ident@7..8 "b"
      ParenClose@8..9 ")"
